[tool.poetry]
name = "akari"
version = "0.1.0"
description = ""
authors = ["yupix <yupi0982@outlook.jp>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.6.0"
async-lru = "^2.0.2"
alembic = "^1.10.2"
aiosqlite = "^0.18.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.7"}
injector = "^0.20.1"
flower = "^1.2.0"
mipa = "^0.2.1"
mipac = "^0.4.2"


[tool.poetry.group.dev.dependencies]
axblack = "^20220330"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
